reviewed arguments